--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,18 @@
+# Core API dependencies
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 python-multipart==0.0.6
+
+# Minimal CV and ML dependencies
 opencv-python-headless==4.8.1.78
-torch==2.1.0
-torchvision==0.16.0
+torch==2.1.0+cpu
+torchvision==0.16.0+cpu
 ultralytics==8.0.200
+
+# Essential utilities
 numpy==1.24.3
 Pillow==10.0.1
 gTTS==2.4.0
+
+# Optional - remove if not needed
 python-dotenv==1.0.0
