--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,8 @@ python-multipart==0.0.6
 opencv-python-headless==4.8.1.78
 torch==2.1.0
 torchvision==0.16.0
-ultralytics==8.0.200
+ultralytics==8.0.203
 numpy==1.24.3
 Pillow==10.0.1
-gTTS==2.4.0
-python-dotenv==1.0.0
+gtts==2.4.0
+requests==2.31.0
