--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-python-multipart==0.0.6
-opencv-python-headless==4.8.1.78
-torch==2.1.0
-torchvision==0.16.0
-ultralytics==8.0.203
-numpy==1.24.3
-Pillow==10.0.1
-gTTS==2.4.0
+fastapi[standard]==0.115.12
+uvicorn[standard]==0.34.0
+python-multipart==0.0.20
+opencv-python-headless==4.9.0.80
+torch==2.4.0
+torchvision==0.19.0
+ultralytics==8.2.0
+numpy==1.26.4
+Pillow==10.3.0
+gtts==2.5.4
 requests==2.31.0
+Jinja2==3.1.5
+python-jose==3.5.0
+aiofiles==24.1.0
